--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,7 @@ body {
   top: 0;
   width: 100%;
   background: var(--primary-bg-color);
+  /* box-shadow: 0px 8px 24px rgba(149, 149, 149, 0.2); */
   z-index: 100;
 }
 
@@ -231,4 +232,47 @@ body {
 
 .section__content .content__desc p {
   font-size: 18px;
+}
+
+/* COMPÉTENCES */
+.section.competences .titre {
+  width: 8%;
+}
+
+.skills {
+  display: grid;
+  grid-template-columns: auto auto;
+  gap: 10px 30px;
+  padding-top: 50px;
+  width: 65%;
+}
+
+.skills .skillsItem__content {
+  display: flex;
+  justify-content: space-between;
+}
+
+.skills .skillsItem__content p {
+  font-weight: bold;
+  font-size: 18px;
+}
+
+.skills .skillsItem__content p:nth-child(2) {
+  color: var(--highlight-color);
+}
+
+.skills__item .skillsItem__bar {
+  position: relative;
+  width: 100%;
+  height: 10px;
+  border-radius: 5px;
+  background: var(--secondary-bg-color);
+}
+
+.skillsItem__bar .bar__value {
+  position: absolute;
+  content: "";
+  height: 10px;
+  border-radius: 5px;
+  background: var(--highlight-color);
 }
