ajouter menu, footer, buttons pour les pages interet & apprentissage

--- a/css/style.css
+++ b/css/style.css
@@ -369,3 +369,6 @@ body {
   background: var(--highlight-color);
   color: var(--primary-bg-color);
 }
+
+/* --------------------------------------------------------------- */
+/* PAGE D'INTÉRÊT */
