--- a/css/style.css
+++ b/css/style.css
@@ -474,11 +474,11 @@ h2 {
 
 /* PRÉSENTATION */
 .presentation {
-  padding-top: 0;
+  padding: 0;
 }
 
 .presentation .presentation__contenu {
-  padding-top: 10px;
+  padding: 10px 0;
 }
 
 .presentation__contenu p {
@@ -487,7 +487,7 @@ h2 {
 
 /* TABLE DE MATIÈRES */
 .sommaire {
-  padding: 20px 0;
+  padding: 0;
 }
 
 .sommaire__contenu .sommaire__liste a {
@@ -504,11 +504,11 @@ h2 {
   text-align: justify;
 }
 
-/* MATÉRIELS */
-.materiels {
-  padding-top: 0;
+.histoire .container {
+  padding-bottom: 0;
 }
 
+/* MATÉRIELS */
 .materiels .titre {
   width: 14%;
 }
