--- a/css/style.css
+++ b/css/style.css
@@ -254,7 +254,8 @@ body.page-accueil {
   width: 8%;
 }
 
-/* .skills {
+/*
+.skills {
   display: grid;
   grid-template-columns: auto auto;
   gap: 10px 30px;
@@ -336,6 +337,44 @@ body.page-accueil {
   border: 2px solid var(--highlight-color);
   transition: all 0.3s ease;
 }
+
+.skills__contenu {
+  display: grid;
+  grid-template-columns: auto auto;
+  gap: 10px 30px;
+  padding-top: 50px;
+}
+
+.skills__contenu .skillsItem__content {
+  display: flex;
+  justify-content: space-between;
+}
+
+.skills__contenu.skillsItem__content p {
+  font-weight: bold;
+  font-size: 18px;
+}
+
+.skills__contenu .skillsItem__content p:nth-child(2) {
+  color: var(--highlight-color);
+}
+
+.skills__item .skillsItem__bar {
+  position: relative;
+  width: 100%;
+  height: 10px;
+  border-radius: 5px;
+  background: var(--secondary-bg-color);
+}
+
+.skillsItem__bar .bar__value {
+  position: absolute;
+  content: "";
+  height: 10px;
+  border-radius: 5px;
+  background: var(--highlight-color);
+} 
+
 
 /* LANGUES */
 .langues .langues__contenu {
