--- a/css/style.css
+++ b/css/style.css
@@ -656,19 +656,73 @@ h2 {
 /* GALERIES */
 .galeries .galeries__liste {
   display: grid;
-  grid-template-columns: auto auto auto;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 10px;
+  padding-top: 30px;
+}
+
+.galeries__liste .galerie__img {
+  position: relative;
+  cursor: pointer;
 }
 
 .galeries__liste .galerie__img img {
-  width: 250px;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
-.galeries__liste .galerie__img .img-3 {
-  grid-row: 1 / span 2;
+.galeries__liste .galerie__img.img-3 {
+  grid-column: 3;
+  grid-row: 1/span 2;
+}
+
+.galeries__liste .galerie__img.img-6 {
+  grid-column: 1;
+  grid-row: 3/span 2;
+}
+
+.galeries__liste .galerie__img.img-10 {
+  grid-column: 2;
+  grid-row: 4/span 2;
 }
 
 .galeries__liste .galerie__img .img__contenu {
   display: none;
+}
+
+/* Animation glisser vers le haut pour img__contenu  */
+@keyframes slideUp2 {
+  from {
+    opacity: 0;
+    transform: translateY(50%);
+  }
+  to {
+    opacity: 0.8;
+    transform: translateY(0);
+  }
+}
+
+.galeries__liste .galerie__img:hover .img__contenu {
+  position: absolute;
+  background-color: var(--primary-text-color);
+  color: var(--primary-bg-color);
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 40%;
+  opacity: 0.8;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  animation-name: slideUp2;
+  animation-duration: 0.5s;
+  animation-timing-function: ease-in-out;
+}
+
+.galerie__img .img__contenu p {
+  margin: 5px;
 }
 
 /* FIN de la page d'intérêt */
